refacto: Changements dans Player.java et de SimplifiedGame.java/CompleteGame.java